[package]
name = "arp-microsvc"
version = "0.1.0"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
actix-web="0.7.19"
ipnetwork = "0.18.0"
pnet = "0.28.0"
reqwest = "0.9.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

#for cargo flamegraph
#[profile.release]
#debug = true
