[package]
name = "ms-arp"
version = "1.1.5"
authors = ["Hayo Parduhn <Hayo@Parduhn.de>"]
edition = "2018"

[lib]
name = "ms_arp_lib"
path = "src/lib.rs"

[dependencies]
# lib_mq = { git = "ssh://git@github.com/parduhn/rs-lb-mq.git" }
lib_mq = { path = "../lb-mq"}
# actix-web="7.19"
ipnetwork = "0.18.0"
nix = "0.22.1"
pnet = "0.28.0"
reqwest = "0.9.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.68"

#for cargo flamegraph
#[profile.release]
#debug = true
